--- a/contracts/swap_test/Cargo.toml
+++ b/contracts/swap_test/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
+edition = "2021"
 name = "osmosis-swap-test"
 version = "0.1.0"
-edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "rlib"]
@@ -9,7 +9,8 @@ crate-type = ["cdylib", "rlib"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-cosmwasm-std = "1.3"
-osmosis-std = "0.16.2"
-cw-utils = "1"
 cosmwasm-schema = "1.3"
+cosmwasm-std = "1.3"
+cw-storage-plus = "1.1.0"
+cw-utils = "1"
+osmosis-std = "0.16.2"
